--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "cssnano": "^4.1.10",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -38,6 +37,8 @@
     "style-loader": "^1.1.2",
     "terser-webpack-plugin": "^2.3.1",
     "url-loader": "^3.0.0",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
@@ -46,6 +47,7 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@babel/runtime-corejs2": "^7.7.7",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.11"
   }
 }
